post refractor fix